# digicash

./: Cargo.toml  LICENSE-MIT  README.md  digicash-spec-v1-production.md  digicash-spec.md
crates/digicash-bank/: Cargo.toml  README.md
crates/digicash-bank/migrations/: 0001_initial_schema.sql
crates/digicash-bank/src/: api.rs  auth.rs  bank.rs  db.rs  error.rs  integration.rs  keys.rs  lib.rs  main.rs  registry_client.rs  serve.rs  test_support.rs  tls.rs
crates/digicash-core/: Cargo.toml  README.md
crates/digicash-core/src/: auth.rs  error.rs  lib.rs  scheme.rs  serial.rs
crates/digicash-core/tests/: negative.rs  rfc9474_kat.rs
crates/digicash-e2e/: Cargo.toml
crates/digicash-e2e/src/: lib.rs
crates/digicash-e2e/tests/: e2e.rs
crates/digicash-proto/: Cargo.toml  README.md
crates/digicash-proto/src/: auth.rs  coin.rs  lib.rs  messages.rs  registry.rs
crates/digicash-registry/: Cargo.toml
crates/digicash-registry/migrations/: 0001_initial_schema.sql
crates/digicash-registry/src/: api.rs  auth.rs  db.rs  error.rs  lib.rs  main.rs  registry.rs  test_support.rs
crates/digicash-wallet/: Cargo.toml  README.md
crates/digicash-wallet/src/: cli.rs  client.rs  error.rs  lib.rs  main.rs  store.rs  testutil.rs  wallet.rs
docs/: digicash-bank-panel.html  digicash-wallet.html  index.html
