[workspace]
resolver = "2"
members = [
    "crates/digicash-core",
    "crates/digicash-proto",
    "crates/digicash-bank",
    "crates/digicash-wallet",
    "crates/digicash-e2e",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
digicash-core = { path = "crates/digicash-core" }
digicash-proto = { path = "crates/digicash-proto" }
digicash-bank = { path = "crates/digicash-bank" }
digicash-wallet = { path = "crates/digicash-wallet" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
