[workspace]
resolver = "2"
members = [
    "crates/digicash-core",
    "crates/digicash-proto",
    "crates/digicash-bank",
    "crates/digicash-wallet",
    "crates/digicash-e2e",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ChronoCoders/digicash"

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
digicash-core = { path = "crates/digicash-core", version = "0.2.0" }
digicash-proto = { path = "crates/digicash-proto", version = "0.6.0" }
digicash-bank = { path = "crates/digicash-bank", version = "0.6.0" }
digicash-wallet = { path = "crates/digicash-wallet", version = "0.6.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
