[package]
name = "digicash-bank"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Bank server for the digicash e-cash prototype: account ledger, denomination keys, spent-serial store, and the withdraw/deposit protocol. Experimental and unaudited."

[lints.rust]
warnings = { level = "deny", priority = -1 }
missing_docs = "warn"

[features]
# Exposes `test_support` (isolated Postgres test databases) to downstream dev-dependencies
# (digicash-wallet, digicash-e2e). Also active in this crate's own test builds.
test-support = []

[dependencies]
digicash-core = { workspace = true }
digicash-proto = { workspace = true }
axum = "0.8"
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
deadpool-postgres = "0.14"
hex = "0.4"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
serde = { workspace = true }
serde_json = { workspace = true }
sled = "0.34"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "migrate", "macros"] }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-postgres = "0.7"
tracing = { workspace = true }
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = { version = "0.5", features = ["util"] }
