[package]
name = "digicash-core"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Cryptographic primitives for the digicash e-cash prototype: RFC 9474 RSA blind signatures over coin serials. Experimental and unaudited."

[lints]
workspace = true

[dependencies]
blind-rsa-signatures = "0.17.2"
ed25519-dalek = "2"
getrandom = "0.4.3"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
# also a normal dependency; listed here so the RFC 9474 KAT integration test can build
# keys from vector components and drive a mock RNG through the low-level API.
blind-rsa-signatures = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
