[package]
name = "digicash-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dev-dependencies]
digicash-core = { workspace = true }
digicash-bank = { workspace = true, features = ["test-support"] }
digicash-proto = { workspace = true }
digicash-registry = { workspace = true, features = ["test-support"] }
digicash-wallet = { workspace = true }
hex = "0.4"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
serde_json = { workspace = true }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
ureq = { version = "2", features = ["json"] }
