[package]
name = "digicash-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
digicash-core = { workspace = true }
digicash-proto = { workspace = true }
clap = { version = "4", features = ["derive"] }
getrandom = "0.4.3"
serde_json = { workspace = true }
sled = "0.34"
thiserror = { workspace = true }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
digicash-bank = { workspace = true }
axum = "0.8"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
