[package]
name = "digicash-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Wallet client and CLI for the digicash e-cash prototype: withdraw, spend to a bundle, and deposit. Experimental and unaudited."

[lints.rust]
warnings = { level = "deny", priority = -1 }
missing_docs = "warn"

[dependencies]
digicash-core = { workspace = true }
digicash-proto = { workspace = true }
clap = { version = "4", features = ["derive"] }
getrandom = "0.4.3"
hex = "0.4"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
serde = { workspace = true }
serde_json = { workspace = true }
sled = "0.34"
thiserror = { workspace = true }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
digicash-bank = { workspace = true, features = ["test-support"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
